HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/CapabilityClassNameReserved/Expected.uv
//! Expected diagnostic metadata for the CapabilityClassNameReserved rejected-source specimen.

expectedDiagnostic("E-MOD-1304", "req.14.CapabilityClassNamesReserved")
